--- a/happy-birthday.html
+++ b/happy-birthday.html
@@ -167,7 +167,7 @@
 <body>
     <h1>Happy Birthday!</h1>
     <div id="message"></div>
-    <img id="image" src="./6a30c75a0b0b77cb595a1b3362796d3b_1741678103707880520.png~tplv-a9rns2rl98-image.png"
+    <img id="image" src="./cake.webp"
         alt="Birthday Image">
     <audio id="bgMusic" src="./happy-birthday-254480.mp3"
         loop></audio>
