--- a/happy-birthday.html
+++ b/happy-birthday.html
@@ -63,12 +63,10 @@
   <script>
     const emojis = ['💖', '🎈', '⭐', '🎂'];
     const messages = [
-      '愿蕊宝儿的论文源源不断，想的、梦的都成真！',
-      '在这个特别的日子里，祝你生日快乐~',
-      '我滴宝儿，生活的每一天都要充满阳光和欢笑。',
+      '在这个特别的日子里，希望蕊宝儿想的、梦的都实现！',
+      '祝我滴宝儿，生活的每一天都充满阳光和欢笑。',
       '希望你的人生是一场奇妙的冒险，快乐永不止步！',
       '愿你在新的一岁里，勇敢追梦，永不放弃！',
-      '无论前方多远，我都会陪着你，一起走过每一个春夏秋冬。',
       '生日快乐，岁岁年年都有今朝的快乐！'
     ];
     const messageElement = document.getElementById('message');
@@ -115,7 +113,7 @@
             // window.open('https://vvushaolin.com/firework/index.html')
             location.href = 'https://vvushaolin.com/firework/index.html';
           });
-          movieBtn.addEventListener('click', () => {
+          movieButton.addEventListener('click', () => {
             window.open('https://vvushaolin.com/go-movies/index.html')
           });
         }
