--- a/happy-birthday.html
+++ b/happy-birthday.html
@@ -7,8 +7,8 @@
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
   <title>宝贝儿生日快乐!</title>
   <link rel="stylesheet" href="./styles/index.css">
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script> -->
-  <script src="./libs/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <!-- <script src="./libs/three.min.js"></script> -->
 </head>
 
 <body>
